2003-05-26  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler.h: Rename FH_W95LSBUG flag to FH_LSEEKED.
	(fhandler_base::set_did_lseek): Rename from set_check_win95_lseek_bug.
	(fhandler_base::get_did_lseek): Rename from get_check_win95_lseek_bug.
	(fhandler_base::set_fs_flags): New method.
	(fhandler_base::get_fs_flags): Ditto.
	* fhandler.cc (fhandler_base::write): Make 64 bit clean.  Convert file
	to a "sparse" file when writing after a long lseek (>64K) beyond EOF.
	(fhandler_base::lseek): Call set_did_lseek() instead of
	set_check_win95_lseek_bug().
	(fhandler_base::fhandler_base): Initialize fs_flags to 0.
	* fhandler_disk_file.cc (fhandler_disk_file::open): Don't create files  
	as "sparse" unconditionally.  Set fs_flags member.

2003-05-25  Pierre Humblet  <pierre.humblet@ieee.org>

	* autoload.cc (GetDiskFreeSpaceEx): Add.
	* syscalls.cc (statfs): Call full_path.root_dir() instead of
	rootdir(full_path). Use GetDiskFreeSpaceEx when available and
	report space available in addition to free space.
	* fhandler_disk_file.cc (fhandler_disk_file::fstat_by_name):
	Do not call FindFirstFile for disk root directories.

2003-05-24  Joe Buehler  <jhpb@draco.hekimian.com>

	* fhandler_process.cc (format_process_stat): Use PagefileUsage
	instead of VirtualSize.
	(get_mem_values): Ditto.

2003-05-21  Corinna Vinschen  <corinna@vinschen.de>

	* shared_info.h: Match shared_name declaration with below change.
	* shared.cc (shared_name): Use incoming char * parameter instead of
	local static buffer.
	(open_shared): Accomodate new calling convention for shared_name.
	* exceptions.cc (events_init): Ditto.
	* sigproc.cc (getsem): Ditto.
	* syscalls.cc (login): Ditto.
	(logout): Ditto.
	(pututline): Ditto.

2003-05-20  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_socket.cc (secret_event_name): Return void.  Use incoming
	char * parameter instead of local static buffer.
	(fhandler_socket::create_secret_event): Accomodate new calling
	convention for secret_event_name.